<resources>
    <string name="app_name">Futbolinea</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Futbolinea</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_user">Perfil</string>
    <string name="menu_history">Historial</string>
    <string name="menu_proxmatch">Próximo</string>
    <string name="button_logout">Cerrar Sesión</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_registration">Registro</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Registro</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reg_title">"Registro"</string>
    <string name="reg_date">"Fecha de Nacimiento"</string>
    <string name="prompt_repeatPass">Repetir Contraseña</string>
    <string name="prompt_username">Nombre Completo</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_newPassword">Ingrese Contraseña</string>
    <string name="prompt_newEmail">Ingrese EMail</string>
    <string name="action_login">Iniciar</string>
    <string name="action_signin">Registrarse</string>
    <string name="signed_out">Usuario no existente o clave incorrecta</string>
    <string name="emailpassword_status_fmt">Usuario logueado</string>
    <string name="firebase_status_fmt">Encontrado en Firebase</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="main_button_profile">PERFIL</string>
    <string name="main_button_grupos">GRUPOS</string>
    <string name="main_buttons_logout">Cerrar Sesión</string>
    <string name="perfil_titulo">USUARIO</string>
    <string name="perfil_guardar">Guardar</string>
    <string name="perfil_elegirArchivo">Elija archivo</string>
    <string name="perfil_elegirFoto">Seleccionar</string>
    <string name="perfil_fechanac">Fecha de Nacimiento</string>
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_apellido">Apellido</string>
    <string name="perfil_apodo">Apodo</string>
    <string name="perfil_celular">Celular</string>
    <string name="grupos_titulo">GRUPOS</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
