<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_proxmatch"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_proxmatch" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_button_logout"
            android:title="@string/button_logout" />
    </group>
</menu>
